# gym-learn_wbc

./: .gitignore  README.md  setup.py
gym_learn_wbc/: __init__.py  test_Env.py
gym_learn_wbc.egg-info/: PKG-INFO  SOURCES.txt
gym_learn_wbc/envs/: __init__.py  learn_wbc_env.py
gym_learn_wbc/envs/raisim_dll/: CMakeLists.txt
gym_learn_wbc/envs/raisim_dll/lib_src/: leg.cpp  raisim_call.py  stoch3_pd_control.cpp  stoch3_raisim_lib.cpp  stoch3_test.cpp
gym_learn_wbc/envs/raisim_dll/rsc/Stoch3/: CMakeLists.txt  package.xml
gym_learn_wbc/envs/raisim_dll/rsc/Stoch3/config/: joint_names_stoch3_urdf.yaml
gym_learn_wbc/envs/raisim_dll/rsc/Stoch3/launch/: display.launch  gazebo.launch
gym_learn_wbc/envs/raisim_dll/rsc/Stoch3/meshes/: BLA_link.STL  BLH_link.STL  BLK_link.STL  BRA_link.STL  BRH_link.STL  BRK_link.STL  FLA_link.STL  FLH_link.STL  FLK_link.STL  FRA_link.STL  FRH_link.STL  FRK_link.STL  base_link.STL
gym_learn_wbc/envs/raisim_dll/rsc/Stoch3/urdf/: stoch3_urdf.csv  stoch3_urdf.urdf
src/: test_Env.py  test_agent.py  test_params.py  train_ppo_2.py
